--- a/package.json
+++ b/package.json
@@ -14,20 +14,27 @@
     "@primevue/forms": "^4.3.4",
     "@primevue/themes": "^4.3.4",
     "@tailwindcss/vite": "^4.1.7",
+    "@tiptap/extension-collaboration": "^2.12.0",
+    "@tiptap/extension-collaboration-cursor": "^2.12.0",
     "@tiptap/extension-table": "^2.12.0",
     "@tiptap/extension-table-cell": "^2.12.0",
     "@tiptap/extension-table-header": "^2.12.0",
     "@tiptap/extension-table-row": "^2.12.0",
     "@tiptap/extension-youtube": "^2.12.0",
     "@vueuse/nuxt": "13.2.0",
-    "nuxt": "^3.17.3",
+    "nuxt": "latest",
     "primevue": "^4.3.4",
     "tailwindcss": "^4.1.7",
     "tailwindcss-animated": "^2.0.0",
     "tailwindcss-intersect": "^2.2.0",
     "tiptap-extension-resize-image": "^1.2.2",
+    "utils": "link:y-websocket/bin/utils",
     "vue": "^3.5.14",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "ws": "^8.18.2",
+    "y-leveldb": "^0.2.0",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27"
   },
   "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387",
   "devDependencies": {
