--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@tiptap/extension-table-row": "^2.12.0",
     "@tiptap/extension-youtube": "^2.12.0",
     "@vueuse/nuxt": "13.2.0",
+    "crossws": "^0.3.5",
+    "lib0": "^0.2.108",
     "nuxt": "latest",
     "primevue": "^4.3.4",
     "tailwindcss": "^4.1.7",
@@ -33,6 +35,7 @@
     "vue-router": "^4.5.1",
     "ws": "^8.18.2",
     "y-leveldb": "^0.2.0",
+    "y-protocols": "^1.0.6",
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.27"
   },
