feat: Refactor user and document models to include security features and authentication tokens
- Updated Doc type to extend DbEntry and include security fields: owners, collaborators, viewers, and sharingLink.
- Enhanced User model to include authTokens for managing user sessions.
- Implemented user registration, login, and retrieval APIs with proper error handling.
- Created utility functions for user management, including token validation and user creation.
- Removed unused code in docsHandler and added necessary imports for user handling.
- Introduced DbEntry model for consistent database entries across user and document models.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@formkit/auto-animate": "0.8.2",
     "@primevue/forms": "^4.3.4",
     "@primevue/themes": "^4.3.4",
+    "@sidebase/nuxt-auth": "0.10.1",
     "@tailwindcss/vite": "^4.1.7",
     "@tiptap/extension-collaboration": "^2.12.0",
     "@tiptap/extension-collaboration-cursor": "^2.12.0",
