--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tiptap-extension-resize-image": "^1.2.2",
     "tiptap-pagination-breaks": "^1.0.3",
     "utils": "link:y-websocket/bin/utils",
+    "vercel-kv": "link:unstorage/drivers/vercel-kv",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1",
     "ws": "^8.18.2",
