--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "@primevue/themes": "^4.3.4",
     "@sidebase/nuxt-auth": "0.10.1",
     "@tailwindcss/vite": "^4.1.7",
+    "@tiptap/extension-code-block-lowlight": "^2.12.0",
     "@tiptap/extension-collaboration": "^2.12.0",
     "@tiptap/extension-collaboration-cursor": "^2.12.0",
     "@tiptap/extension-table": "^2.12.0",
     "@tiptap/extension-table-cell": "^2.12.0",
     "@tiptap/extension-table-header": "^2.12.0",
     "@tiptap/extension-table-row": "^2.12.0",
+    "@tiptap/extension-task-item": "^2.12.0",
+    "@tiptap/extension-task-list": "^2.12.0",
+    "@tiptap/extension-underline": "^2.12.0",
     "@tiptap/extension-youtube": "^2.12.0",
     "@vueuse/nuxt": "13.2.0",
     "crossws": "^0.3.5",
     "lib0": "^0.2.108",
+    "lowlight": "^3.3.0",
     "nuxt": "latest",
     "primevue": "^4.3.4",
     "tailwindcss": "^4.1.7",
