--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@tiptap/extension-underline": "^2.12.0",
     "@vueuse/nuxt": "13.2.0",
     "crossws": "^0.3.5",
+    "docx2html": "^1.3.2",
     "lib0": "^0.2.108",
     "lowlight": "^3.3.0",
+    "markdown-it": "^14.1.0",
     "nuxt": "latest",
     "primevue": "^4.3.4",
     "tailwindcss": "^4.1.7",
@@ -55,6 +57,7 @@
     "@primevue/nuxt-module": "^4.3.4",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/markdown-it": "^14.1.2",
     "nuxt-tiptap-editor": "^2.2.1"
   }
 }
