--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@aivue/core": "^1.3.3",
     "@formkit/auto-animate": "0.8.2",
     "@primevue/forms": "^4.3.4",
     "@primevue/themes": "^4.3.4",
@@ -37,6 +38,7 @@
     "lowlight": "^3.3.0",
     "markdown-it": "^14.1.0",
     "nuxt": "latest",
+    "ollama": "^0.5.15",
     "primevue": "^4.3.4",
     "tailwindcss": "^4.1.7",
     "tailwindcss-animated": "^2.0.0",
