--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tiptap/extension-task-list": "^2.12.0",
     "@tiptap/extension-text-style": "^2.12.0",
     "@tiptap/extension-underline": "^2.12.0",
+    "@vueuse/core": "^13.3.0",
     "@vueuse/nuxt": "13.2.0",
     "crossws": "^0.3.5",
     "docx2html": "^1.3.2",
