--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tiptap/extension-color": "^2.12.0",
     "@tiptap/extension-font-family": "^2.12.0",
     "@tiptap/extension-highlight": "^2.12.0",
+    "@tiptap/extension-image": "^2.13.0",
     "@tiptap/extension-table": "^2.12.0",
     "@tiptap/extension-table-cell": "^2.12.0",
     "@tiptap/extension-table-header": "^2.12.0",
@@ -30,6 +31,8 @@
     "@tiptap/extension-task-list": "^2.12.0",
     "@tiptap/extension-text-style": "^2.12.0",
     "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/starter-kit": "^2.13.0",
+    "@tiptap/vue-3": "^2.13.0",
     "@vueuse/core": "^13.3.0",
     "@vueuse/nuxt": "13.2.0",
     "crossws": "^0.3.5",
@@ -37,6 +40,7 @@
     "lib0": "^0.2.108",
     "lowlight": "^3.3.0",
     "markdown-it": "^14.1.0",
+    "marked": "^15.0.12",
     "nuxt": "latest",
     "ollama": "^0.5.15",
     "primevue": "^4.3.4",
@@ -53,7 +57,7 @@
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.27"
   },
-  "packageManager": "pnpm@10.11.0",
+  "packageManager": "pnpm@10.11.1",
   "devDependencies": {
     "@nuxt/icon": "^1.13.0",
     "@primevue/nuxt-module": "^4.3.4",
