--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "packageManager": "pnpm@10.11.1",
   "devDependencies": {
     "@nuxt/icon": "^1.15.0",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@primevue/nuxt-module": "^4.3.6",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
