feat: add account settings page with user data export and account deletion functionality.

--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@tiptap/extension-underline": "^2.24.2",
     "@tiptap/starter-kit": "^2.24.2",
     "@tiptap/vue-3": "^2.24.2",
+    "@types/archiver": "^7.0.0",
     "@vueuse/core": "^13.5.0",
     "@vueuse/nuxt": "13.2.0",
+    "archiver": "^7.0.1",
     "crossws": "^0.3.5",
     "crypto": "^1.0.1",
     "lib0": "^0.2.109",
